20-releases/50-kustomize/lab-app/instance/base/apicast-production-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: apicast
    threescale_component: apicast
    ingress: internet
  name: apicast-production
  namespace: lab-app
spec:
  host: api.middleware.rhbr-lab.com
  port:
    targetPort: proxy
  tls:
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIFtjCCA54CCQCVVNSegxHD9DANBgkqhkiG9w0BAQsFADCBnDELMAkGA1UEBhMC
[...]
      ktpDS0vvWs4wmrvYfOgdaXziUpidwfRcn9A=
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: Redirect
    key: |
      -----BEGIN RSA PRIVATE KEY-----
      MIIJKAIBAAKCAgEAsPbqhZLXYBP5pl0CMkDqxOviTfrQEo4+mFwTylNezlFJWP+B
[...]
      -----END RSA PRIVATE KEY-----
    termination: edge
  to:
    kind: Service
    name: lab-app-apicast-production
    weight: 100
  wildcardPolicy: None
